# OpenGIS

./: .gitignore  AGENT_ARCHITECTURE_UPGRADE.md  README.md  README.zh.md  agent-loop-evaluation.md  electron-builder.yml  electron.vite.config.ts  index.html  loading.html  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  tsconfig.node.json  tsconfig.stage1.json  vitest.config.ts
electron/: logger.ts  (+3 more)
python-backend/: pyproject.toml  setup-python.mjs  setup.sh
python-backend/opengis_backend/: __init__.py  __main__.py  constants.py  context_manager.py  logging_setup.py  protocol_types.py  rpc_handler.py  rpc_http.py  server.py
python-backend/opengis_backend/agent/: __init__.py  _subprocess_runner.py  agent_factory.py  agent_loop.py  auto_install.py  code_agent.py  context_manager.py  context_persistence.py  engine.py  event_log.py  events.py  executor.py  executor_factory.py  factory_common.py  knowledge_extractor.py  llm.py  open_gis_agent.py  permission.py  permission_store.py  prompts.py  queue.py  runner.py  script_archive.py  session.py  step_recorder.py  tool_output.py  tool_runtime.py  tools.py  workflow_factory.py  workflow_loop.py  workflow_store.py
python-backend/tests/: test_agent_event_log.py  test_agent_loop.py  test_agent_tools.py  test_context_manager.py  test_memory_harness.py  test_permission_runtime.py  test_provider_projector.py  test_rpc_worker_dynamic_coalescing.py  test_rpc_workflow_detection.py  test_runtime_control.py  test_script_archive.py  test_tool_runtime_auto_install.py  test_worker_protocol.py  test_workflow_loop.py
(+395 files in other folders)
