[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opengis-backend"
version = "0.1.0"
description = "OpenGIS Python backend — GIS data processing, Agent engine, and Skill system"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OpenGIS Contributors"}
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "litellm>=1.40.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "orjson>=3.9.0",
    "geopandas>=0.14.0",
    "rasterio>=1.3.0",
    "fiona>=1.9.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "tabulate>=0.9.0",
    "contextily>=1.4.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
full = [
    "whitebox>=2.3.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "cartopy>=0.22.0",
    "pysal>=24.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
